Update UI content

--- a/templates/index.html
+++ b/templates/index.html
@@ -168,9 +168,9 @@ header{
      <div class="notice">
   <div class="notice-title">🔔 Thông báo hôm nay</div>
   <ul>
-    <li>🔥 Giảm 10% cho các Combo</li>
-    <li>🎁 Chương trình tích điểm </li>
-    <li>⏰ Nhận đơn từ 15:00 – 22:00</li>
+    <li>Shop khai trương có rất nhiều ưu đãi.</li>
+    <li>Hôm nay shop có 13 món nha.</li>
+    <li>Shop nhận đặt trước nhé.</li>
   </ul>
 </div>
 
