--- a/templates/about.html
+++ b/templates/about.html
@@ -33,9 +33,11 @@ header{
 
 /* ===== MAIN ===== */
 .main{
-  padding-top:96px; /* TÁCH HẲN HEADER */
-  padding:16px;
-  max-width:1100px;
+  padding-top:88px; /* tách rõ khỏi header */
+  padding-left:16px;
+  padding-right:16px;
+  padding-bottom:30px;
+  max-width:600px;
   margin:auto;
 }
 
